<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".ZephyrMonitor" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

	<RelativeLayout android:id="@+id/fullscreen_content"
	    			android:layout_width="match_parent" 
	    			android:layout_height="match_parent" >
    
    	<TextView
        	android:id="@+id/heartRateLabel"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:ems="10"
        	android:textSize="24sp"
        	android:text="@string/heartRateLabel" />
    
    	<TextView
	        android:id="@+id/heartRate"
			android:layout_below="@+id/heartRateLabel"    	    
    	    android:layout_alignParentLeft="true"    	    
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textColor="@android:color/white" 
	        android:text="@string/heartRate"
        	android:textSize="24sp"
			android:ems="10" />

    	<TextView
        	android:id="@+id/speedLabel"
			android:layout_below="@+id/heartRate"    	    
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:ems="10"
        	android:textSize="24sp"
        	android:text="@string/speedLabel" />
    
    	<TextView
	        android:id="@+id/speed"
			android:layout_below="@+id/speedLabel"    	    
    	    android:layout_alignParentLeft="true"    	    
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textColor="@android:color/white" 
	        android:text="@string/speed"
        	android:textSize="24sp"
			android:ems="10" />

    	<TextView
        	android:id="@+id/batteryLabel"
			android:layout_below="@+id/speed"    	    
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:ems="10"
        	android:textSize="24sp"
        	android:text="@string/batteryLabel" />
    
    	<TextView
	        android:id="@+id/batteryCharge"
			android:layout_below="@+id/batteryLabel"    	    
    	    android:layout_alignParentLeft="true"    	    
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textColor="@android:color/white" 
	        android:text="@string/batteryCharge"
        	android:textSize="24sp"
			android:ems="10" />
    	    	    	
		<TextView
            android:id="@+id/status"
			android:layout_below="@+id/batteryCharge"    	    
			android:layout_above="@+id/fullscreen_content_controls"    	    
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
        	android:textSize="24sp"
            android:text="@string/status" />    	
    </RelativeLayout>
    
    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/dummy_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />
        </LinearLayout>

        

    </FrameLayout>

</FrameLayout>